packages/svelte/tests/validator/samples/document-binding-invalid-dimensions/input.svelte
<script>
    let foo;
</script>

<svelte:document bind:clientWidth={foo} />
