packages/svelte/tests/compiler-errors/samples/runes-invalid-snippet-binding/main.svelte
<svelte:options runes />

{#snippet foo(value)}
	<input bind:value={value}>
{/snippet}
